--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                     <div class="timeline-marker is-link"></div>
                     <div class="timeline-content">
                         <p class="heading has-text-darker has-text-weight-normal">December 2016</p>
-                        <p class="has-text-weight-semibold has-text-darker">Dean Honors Roll</p>
+                        <p class="has-text-weight-semibold has-text-darker">Deans Honors Roll</p>
                     </div>
                 </div>
                 <header class="timeline-header">
@@ -484,7 +484,7 @@
                     <div class="timeline-marker is-link"></div>
                     <div class="timeline-content">
                         <p class="heading has-text-darker has-text-weight-normal"> May 2017</p>
-                        <p class="has-text-weight-semibold has-text-darker">Dean's Honor Roll</p>
+                        <p class="has-text-weight-semibold has-text-darker">Deans Honor Roll</p>
                     </div>
                 </div>
                 <header class="timeline-header">
